# Bud-AI

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: app.py
core/: __init__.py  benchmark.py  config.py  telemetry.py
core/agents/: __init__.py  base.py  classroom.py  gemini_agent.py  heuristic_agent.py  memory_agent.py
core/conversation/: __init__.py  openenv_tree.py  tree.py
core/environment/: __init__.py  engine.py  state.py
core/grading/: __init__.py  grader.py
core/memory/: __init__.py  memory.py
core/visualisation/: __init__.py  knowledge_graph.py
